--- a/front-end/package.json
+++ b/front-end/package.json
@@ -15,6 +15,7 @@
     "chalk": "1.1.3",
     "connected-react-router": "^4.3.0",
     "css-loader": "0.28.7",
+    "delay": "^3.0.0",
     "dotenv": "4.0.0",
     "dotenv-expand": "4.2.0",
     "eslint": "4.10.0",
@@ -35,6 +36,7 @@
     "postcss-loader": "2.0.8",
     "promise": "8.0.1",
     "qs": "^6.5.2",
+    "radium": "^0.24.0",
     "raf": "3.4.0",
     "react": "^16.4.0",
     "react-dev-utils": "^5.0.1",
@@ -43,6 +45,7 @@
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-select": "^1.2.1",
+    "react-spring": "^5.3.18",
     "redux": "^4.0.0",
     "redux-saga": "^0.16.0",
     "resolve": "1.6.0",
