--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,19 @@ services:
     image: postgres:10.1-alpine
     volumes:
       - postgres_data:/var/lib/postgresql/data/
+
+  redis:
+    image: redis:alpine
+
+  celery:
+    build: .
+    command: celery -A proj worker -l info
+    volumes:
+      - .:/code
+    depends_on:
+      - db
+      - redis
+
   web:
     build: .
     command: python /code/manage.py migrate --noinput
@@ -15,8 +28,12 @@ services:
       - 8000:8000
     environment:
       - SECRET_KEY=changemeinprod
+      - CELERY_BROKER_URL=redis://redis:6379
     depends_on:
       - db
+      - redis
+    external_links:
+      - db:db
 
 volumes:
   postgres_data:
