--- a/front-end/package.json
+++ b/front-end/package.json
@@ -60,9 +60,9 @@
     "whatwg-fetch": "2.0.3"
   },
   "scripts": {
-    "start": "node scripts/start.js",
-    "build": "node scripts/build.js",
-    "test": "node scripts/test.js --env=jsdom"
+    "start": "node react-scripts/start.js",
+    "build": "node react-scripts/build.js",
+    "test": "node react-scripts/test.js --env=jsdom"
   },
   "babel": {
     "presets": [
