start playing with hooks

--- a/front-end/package.json
+++ b/front-end/package.json
@@ -37,12 +37,13 @@
     "promise": "8.0.1",
     "radium": "^0.24.0",
     "raf": "3.4.0",
-    "react": "^16.4.0",
+    "react": "16.7.0-alpha",
+    "react-cache": "^2.0.0-alpha.1",
     "react-dev-utils": "^5.0.2",
-    "react-dom": "^16.4.0",
+    "react-dom": "16.7.0-alpha",
     "react-redux": "^5.0.7",
-    "react-router": "^4.2.0",
-    "react-router-dom": "^4.2.2",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.1.1",
     "react-select": "^2.0.0",
     "react-spring": "^5.3.18",
     "redux": "^4.0.0",
